# houdini-mcp

./: README.md  __init__.py  command_schema.json  commands.py  houdini_plugin.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  rest_to_socket_proxy.py  server.py  simulations.py
houdini-mcp/: .gitignore  README.md  houdini_plugin.py  main.py  pyproject.toml
src/houdini_mcp/: __init__.py  server.py
tests/: test_rest_api.py  test_socket_server.py
