[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "houdini-mcp"
version = "0.2.0"
description = "Houdini Model Context Protocol Bridge for Claude AI"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "flask>=2.0.0",
    "requests>=2.25.0",
]

[project.scripts]
houdini-mcp = "main:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/houdini-mcp"
"Bug Tracker" = "https://github.com/yourusername/houdini-mcp/issues"
